Prog3/.svn/pristine/aa/aac362230a2ba5baad8621f8f30116102bb307bd.svn-base
  ANDROID_HOME=C:\Program Files (x86)\Android\android-sdk
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio 14.0\Apps\apache-ant-1.9.3\
  JAVA_HOME=C:\Program Files (x86)\Java\jdk1.7.0_55
  NDK_ROOT=C:\ProgramData\Microsoft\AndroidNDK64\android-ndk-r10e\
  BlueKittyBot_Data.cpp
BlueKittyBot_Data.cpp(218,6): error : use of undeclared identifier 'BlueKittyBot'
  void BlueKittyBot::SetUpData()
       ^
  1 error generated.
